@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Display the exit code when a system command fails
     Fix AssumeClean when the result exists but has never been built
     IMPORTANT: Incompatible on disk format change
     Change the storage to not write messages on --silent
